--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -703,9 +703,9 @@
                         <div ng-if="viewType == 'partner'">
                             <div class="portlet light border-rounded">
                                 <div class="portlet-title">
-                                    <div class="caption ">
+                                    <div class=" ">
                                         <!--<i class="icon-settings font-red-sunglo"></i>-->
-                                        <span class=" uppercase"><i class="fa fa-hourglass-2 icon-color"></i>&nbsp; Her Partenr preference</span>
+                                        <span class=" uppercase" style="float: center!important;"> Her Partner preference</span>
                                     </div>
 
                                 </div>
