--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -273,20 +273,20 @@
                         <div class="col-md-12 margin-top-10 ">
                                 <label class="checkbox-inline" class="custon-text">
                                     <input type="radio" icheckbox_flat-red class="icheck " ng-model="privacy.photo"
-                                            value="all">
+                                            value="all" ng-click="changePhoto()">
                                     Visible to all <i style="margin-left: 2px;" class="fa fa-question-circle"></i></label>
                             </div>
 
                             <div class="col-md-12 margin-top-10 ">
                                 <label class="checkbox-inline" class="custon-text">
                                     <input type="radio" icheckbox_flat-red class="icheck " ng-model="privacy.photo"
-                                            value="request">
+                                            value="request" ng-click="changePhoto()">
                                     Visible to ony invitation sent/accepted <i style="margin-left: 2px;" class="fa fa-question-circle"></i></label>
                             </div>
                             <div class="col-md-12 margin-top-10 ">
                                 <label class="checkbox-inline" class="custon-text">
                                     <input type="radio" icheckbox_flat-red class="icheck " ng-model="privacy.photo"
-                                            value="protected">
+                                            value="protected" ng-click="changePhoto()">
                                     Password Protected <i style="margin-left: 2px;" class="fa fa-question-circle"></i></label>
                             </div>
                             <div class="col-md-12 margin-top-10">
@@ -296,10 +296,11 @@
                                             This is how the photo will look to other members
                                         </div>
                                         <div class="col-md-6">
-                                            <div style="height: 200px;width:200px;font-size:40px;text-align: center;line-height: 200px;background-image: url('../assets/images/prof1.jpg');opacity: .2 "><i style="opacity: 1" class="fa fa-expeditedssl"></i>
-                                                <!--<img style="height: 200px;opacity: .2"-->
-                                                <!--ng-src="../assets/images/prof1.jpg"/>-->
-                                            </div>
+                                            <!--<div style="height: 200px;width:200px;font-size:40px;text-align: center;line-height: 200px;background-image: url('../assets/images/prof1.jpg');opacity: .2 "><i style="opacity: 1" class="fa fa-expeditedssl"></i>-->
+                                                <!--&lt;!&ndash;<img style="height: 200px;opacity: .2"&ndash;&gt;-->
+                                                <!--&lt;!&ndash;ng-src="../assets/images/prof1.jpg"/>&ndash;&gt;-->
+                                            <!--</div>-->
+                                            <img class="dir-img" ng-src="{{image}}" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px; height:auto;width: 180px"  >
                                         </div>
                                         <div class="col-md-6">
                                             <div class="row">
