--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -712,11 +712,19 @@
                                 <div class="portlet-body form">
                                     <div class="row">
                                         <div class="col-md-5">
+                                            <span ng-if="view.images.length == 0">
 
                                             <img ng-if="view.gender == 'female'" class="imgae-circle" style="margin-top: 20px;margin-left: 20px"
                                                  ng-src="/assets/defaultImages/female_card.jpg"/>
                                             <img ng-if="view.gender == 'male'" class="imgae-circle" style="margin-top: 20px;margin-left: 20px"
                                                  ng-src="/assets/defaultImages/male_card.jpg"/>
+                                                </span>
+                                            <span ng-if="view.images.length > 0">
+                                                <img class="imgae-circle" style="margin-top: 20px;margin-left: 20px"
+                                                     ng-src="{{view.images[0].image}}"/>
+
+
+</span>
                                             <div style="margin-top: 15px;font-weight: 600;color:grey"><span ng-if="view.gender == 'female'">HER</span><span ng-if="view.gender == 'male'">HIS</span> PREFERENCES</div>
                                         </div>
                                         <div class="col-md-2 page" style="text-align: center">
@@ -732,12 +740,19 @@
                                         <div class="col-md-5">
                                             <div class="row">
                                                 <div class="col-md-12">
+                                                    <span ng-if="login_user.images.length == 0">
+
                                                     <img ng-if="login_user.gender == 'female'" class="imgae-circle pull-right" style="margin-top: 20px;margin-right: 20px"
                                                          ng-src="/assets/defaultImages/female_card.jpg"/>
                                                     <img ng-if="login_user.gender == 'male'" class="imgae-circle pull-right" style="margin-top: 20px;margin-right: 20px"
                                                          ng-src="/assets/defaultImages/male_card.jpg"/>
+</span>                                                    <span ng-if="login_user.images.length > 0">
+                                                    <img  class="imgae-circle pull-right" style="margin-top: 20px;margin-right: 20px"
+                                                         ng-src="{{login_user.images[0].image}}"/>
 
-                                          </div>
+                                                    </span>
+
+                                                </div>
                                                 <div class="col-md-12">
 
                                                 <div style="margin-right: 15px;margin-top: 15px;font-weight: 600;color:grey" class="pull-right" >YOUR MATCH</div>
